# lis3mdl-rs

./: Cargo.toml  README.md
src/: lib.rs  registers.rs
